@@ -22,6 +22,10 @@ Revision history for Perl extension RPi::WiringPi.
           from mode_alt() which has values of 0-7, so if we're higher than mode
           3, everything fails, because pin_mode() accepts only values 0-3. We
           just glean the mode from the 'alt' status instead
+        - added checksum(), generates a random 32-byte hexidecimal string
+        - added uuid(), returns the generated string set as the Pi object's UUID
+          in the new() method
+        - added dump_object(), simply dumps the object out using Data::Dumper
 
 2.3632  2019-06-22
         - added the digital potentiometer (MCP4xxxx) to the test platform (in
